--- a/Pet-Life_2/css/bibliografia.css
+++ b/Pet-Life_2/css/bibliografia.css
@@ -1,19 +1,55 @@
-.imgs-bibliografy {
+.imgs-bibliografy-container {
+  box-sizing: border-box;
+
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   column-gap: 50px;
   row-gap: 70px;
 
-  margin-left: 200px;
-  margin-right: 200px;
-  margin-bottom: 100px;
+  padding-left: 200px;
+  padding-right: 200px;
+  padding-bottom: 100px;
+
+  width: 100%;
 }
 
-.imgs-bibliografy > * {
+.imgs-bibliografy {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  padding: 1rem 2.5rem;
+  
   background: #FFFFFF;
-
+  
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
+  
   border-radius: 10px;
+}
+
+.imgs-bibliografy > img {
+  width: 5.25rem;
+
+  margin-bottom: 0.25rem;
+
+}
+
+.imgs-bibliografy > p {
+  max-width: 12.5rem;
+
+  text-align: center;
+
+  font-family: 'DM Sans';
+  color: #495057;
+  font-size: 1rem;
+}
+
+.bibliografy-separator {
+  height: 2px;
+  width: 100%;
+
+  background-color: #00856F;
+
+  margin-bottom: 0.75rem;
 }
